[tool.poetry]
name = "info_tbm"
version = "0.1.0"
description = ""
authors = ["mdeboute <martin.deboute@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gmplot = "^1.4.1"
imgkit = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
